--- a/html/convert.html
+++ b/html/convert.html
@@ -8,26 +8,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="MDUI/css/mdui.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="convert.css">
-    <script src="jquery-1.9.0.min.js"></script>
+    <!-- <script src="jquery-1.9.0.min.js"></script> -->
     <script src="MDUI/js/mdui.min.js"></script>
     <script src="convert.js"></script>
     <script type="text/javascript">
-        $(document).ready(function () {
-            $("#btn").click(main);
-            $("#cls").click(function () {
-                //document.getElementById("kw").value = "";
+        $(function () {
+            $document.on('click', '#btn', main);
+            //$("#btn").click(main);
+            $document.on('click', '#cls', () => {
                 $("#kw").val("");
                 $("#show1").text("原码");
                 $("#show2").text("反码");
                 $("#show3").text("补码");
-                num++;
-                if (num == 10) alert("恭喜你发现了FLAG = " + fla);
             });
         });
     </script>
 </head>
 
-<body class="mdui-appbar-with-toolbar mdui-theme-primary-indigo mdui-theme-accent-pink">
+<body class="mdui-appbar-with-toolbar mdui-theme-primary-light-blue mdui-theme-accent-amber mdui-theme-layout-auto">
     <header class="mdui-appbar mdui-appbar-fixed mdui-appbar-scroll-hide">
         <div class="mdui-toolbar mdui-color-theme">
             <span class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white"
@@ -37,40 +35,44 @@
             <div class="mdui-toolbar-spacer"></div>
             <span class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white"
                 mdui-dialog="{target: '#dialog-docs-theme'}" mdui-tooltip="{content: '设置主题'}">
-                <i class="mdui-icon material-icons">color_lens</i></span>
-            <a href="https://github.com/lollipopnougat/website-calculator/blob/master/html/convert.html" target="_blank"
-                class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white" mdui-tooltip="{content: '查看 Github'}">
-                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 36 36"
-                    enable-background="new 0 0 36 36" xml:space="preserve" class="mdui-icon"
-                    style="width: 24px;height:24px;">
-                    <path fill-rule="evenodd" clip-rule="evenodd" fill="#ffffff" d="M18,1.4C9,1.4,1.7,8.7,1.7,17.7c0,7.2,4.7,13.3,11.1,15.5
+                <i class="mdui-icon material-icons">color_lens</i>
+            </span>
+            <a href="https://github.com/lollipopnougat/website-calculator/blob/master/html/convert.html" target="_blank" class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white" mdui-tooltip="{content: '查看 Github'}">
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 36 36" enable-background="new 0 0 36 36" xml:space="preserve" class="mdui-icon" style="width: 24px;height:24px;">
+                  <path fill-rule="evenodd" clip-rule="evenodd" fill="#ffffff" d="M18,1.4C9,1.4,1.7,8.7,1.7,17.7c0,7.2,4.7,13.3,11.1,15.5
               c0.8,0.1,1.1-0.4,1.1-0.8c0-0.4,0-1.4,0-2.8c-4.5,1-5.5-2.2-5.5-2.2c-0.7-1.9-1.8-2.4-1.8-2.4c-1.5-1,0.1-1,0.1-1
               c1.6,0.1,2.5,1.7,2.5,1.7c1.5,2.5,3.8,1.8,4.7,1.4c0.1-1.1,0.6-1.8,1-2.2c-3.6-0.4-7.4-1.8-7.4-8.1c0-1.8,0.6-3.2,1.7-4.4
               c-0.2-0.4-0.7-2.1,0.2-4.3c0,0,1.4-0.4,4.5,1.7c1.3-0.4,2.7-0.5,4.1-0.5c1.4,0,2.8,0.2,4.1,0.5c3.1-2.1,4.5-1.7,4.5-1.7
               c0.9,2.2,0.3,3.9,0.2,4.3c1,1.1,1.7,2.6,1.7,4.4c0,6.3-3.8,7.6-7.4,8c0.6,0.5,1.1,1.5,1.1,3c0,2.2,0,3.9,0,4.5
               c0,0.4,0.3,0.9,1.1,0.8c6.5-2.2,11.1-8.3,11.1-15.5C34.3,8.7,27,1.4,18,1.4z"></path>
                 </svg>
-            </a>
+              </a>
         </div>
     </header>
     <div class="mdui-container">
-        <div class="mdui-dialog" id="dialog-docs-theme" style="display: none;">
+        <div class="mdui-dialog" id="dialog-docs-theme" style="display: none; top: 77.425px; height: 620.15px;">
             <div class="mdui-dialog-title">设置文档主题</div>
-            <div class="mdui-dialog-content">
+            <div class="mdui-dialog-content" style="height: 500.15px;">
 
                 <p class="mdui-typo-title">主题色</p>
                 <div class="mdui-row-xs-1 mdui-row-sm-2 mdui-row-md-3">
                     <div class="mdui-col">
                         <label class="mdui-radio mdui-m-b-1">
-                            <input type="radio" name="doc-theme-layout" value="" checked="">
+                            <input type="radio" name="doc-theme-layout" value="auto" checked="">
+                            <i class="mdui-radio-icon"></i>
+                            Auto
+                        </label>
+                    </div>
+                    <div class="mdui-col">
+                        <label class="mdui-radio mdui-m-b-1">
+                            <input type="radio" name="doc-theme-layout" value="light">
                             <i class="mdui-radio-icon"></i>
                             Light
                         </label>
                     </div>
                     <div class="mdui-col">
                         <label class="mdui-radio mdui-m-b-1">
-                            <input type="radio" name="doc-theme-layout" value="dark">
+                            <input type="radio" name="doc-theme-layout" value="dark" >
                             <i class="mdui-radio-icon"></i>
                             Dark
                         </label>
@@ -144,14 +146,14 @@
                     </div>
                     <div class="mdui-col mdui-text-color-indigo">
                         <label class="mdui-radio mdui-m-b-1">
-                            <input type="radio" name="doc-theme-primary" value="indigo" checked="">
+                            <input type="radio" name="doc-theme-primary" value="indigo">
                             <i class="mdui-radio-icon"></i>
                             Indigo
                         </label>
                     </div>
                     <div class="mdui-col mdui-text-color-light-blue">
                         <label class="mdui-radio mdui-m-b-1">
-                            <input type="radio" name="doc-theme-primary" value="light-blue">
+                            <input type="radio" name="doc-theme-primary" value="light-blue" checked="">
                             <i class="mdui-radio-icon"></i>
                             Light Blue
                         </label>
@@ -218,7 +220,7 @@
                 <form class="mdui-row-xs-1 mdui-row-sm-2 mdui-row-md-3">
                     <div class="mdui-col mdui-text-color-amber">
                         <label class="mdui-radio mdui-m-b-1">
-                            <input type="radio" name="doc-theme-accent" value="amber">
+                            <input type="radio" name="doc-theme-accent" value="amber" checked="">
                             <i class="mdui-radio-icon"></i>
                             Amber
                         </label>
@@ -295,7 +297,7 @@
                     </div>
                     <div class="mdui-col mdui-text-color-pink">
                         <label class="mdui-radio mdui-m-b-1">
-                            <input type="radio" name="doc-theme-accent" value="pink" checked="">
+                            <input type="radio" name="doc-theme-accent" value="pink">
                             <i class="mdui-radio-icon"></i>
                             Pink
                         </label>
@@ -358,6 +360,124 @@
             <li class="mdui-list-item mdui-ripple mdui-text-color-theme-accent" id="show3" onclick="copy(3)">补码</li>
         </ul>
     </div>
+    <script>
+        var $document = $(document);
+        var DEFAULT_PRIMARY = 'light-blue';
+        var DEFAULT_ACCENT = 'amber';
+        var DEFAULT_LAYOUT = 'auto';
+
+        // 设置 cookie
+        var setCookie = function (key, value) {
+            // cookie 有效期为 1 年
+            var date = new Date();
+            date.setTime(date.getTime() + 365 * 3600 * 1000);
+            document.cookie = key + '=' + value + '; expires=' + date.toGMTString() + '; path=/';
+        };
+
+        var getCookie = function (key) {
+            let cookies_str = document.cookie.split('; ');
+            for (let i of cookies_str) {
+                let items = i.split('=');
+                if (items[0] == key) {
+                    return items[1];
+                }
+            }
+            return null;
+        }
+
+        var setDocsTheme = function (theme) {
+            if (typeof theme.primary === 'undefined') {
+                theme.primary = false;
+            }
+            if (typeof theme.accent === 'undefined') {
+                theme.accent = false;
+            }
+            if (typeof theme.layout === 'undefined') {
+                theme.layout = false;
+            }
+
+            var i, len;
+            var $body = $('body');
+
+            var classStr = $body.attr('class');
+            var classs = classStr.split(' ');
+
+            // 设置主色
+            if (theme.primary !== false) {
+                for (i = 0, len = classs.length; i < len; i++) {
+                    if (classs[i].indexOf('mdui-theme-primary-') === 0) {
+                        $body.removeClass(classs[i]);
+                    }
+                }
+                $body.addClass('mdui-theme-primary-' + theme.primary);
+                setCookie('docs-theme-primary', theme.primary);
+                $('input[name="doc-theme-primary"][value="' + theme.primary + '"]').prop('checked', true);
+            }
+
+            // 设置强调色
+            if (theme.accent !== false) {
+                for (i = 0, len = classs.length; i < len; i++) {
+                    if (classs[i].indexOf('mdui-theme-accent-') === 0) {
+                        $body.removeClass(classs[i]);
+                    }
+                }
+                $body.addClass('mdui-theme-accent-' + theme.accent);
+                setCookie('docs-theme-accent', theme.accent);
+                $('input[name="doc-theme-accent"][value="' + theme.accent + '"]').prop('checked', true);
+            }
+
+            // 设置主题色
+            if (theme.layout !== false) {
+                for (i = 0, len = classs.length; i < len; i++) {
+                    if (classs[i].indexOf('mdui-theme-layout-') === 0) {
+                        $body.removeClass(classs[i]);
+                    }
+                }
+                $body.addClass('mdui-theme-layout-' + theme.layout);
+                setCookie('docs-theme-layout', theme.layout);
+                $('input[name="doc-theme-layout"][value="' + theme.layout + '"]').prop('checked', true);
+            }
+        };
+
+        // 切换主色
+        $document.on('change', 'input[name="doc-theme-primary"]', function () {
+            setDocsTheme({
+                primary: $(this).val()
+            });
+        });
+
+        // 切换强调色
+        $document.on('change', 'input[name="doc-theme-accent"]', function () {
+            setDocsTheme({
+                accent: $(this).val()
+            });
+        });
+
+        // 切换主题色
+        $document.on('change', 'input[name="doc-theme-layout"]', function () {
+            setDocsTheme({
+                layout: $(this).val()
+            });
+        });
+
+        // 恢复默认主题
+        $document.on('cancel.mdui.dialog', '#dialog-docs-theme', function () {
+            setDocsTheme({
+                primary: DEFAULT_PRIMARY,
+                accent: DEFAULT_ACCENT,
+                layout: DEFAULT_LAYOUT
+            });
+        });
+
+        window.onload = function () {
+            let theme = {
+                primary: getCookie('docs-theme-primary') || DEFAULT_PRIMARY,
+                accent: getCookie('docs-theme-accent') || DEFAULT_ACCENT,
+                layout: getCookie('docs-theme-layout') || DEFAULT_LAYOUT
+            }
+            setDocsTheme(theme);
+        };
+    </script>
 </body>
 
 </html>
