--- a/html/colorful.html
+++ b/html/colorful.html
@@ -45,7 +45,7 @@
         .headline {
             margin-top: 300px;
             font-size: 72pt;
-            background: linear-gradient(264.51deg, #ffe580 4.38%, #ff7571 11.51%, #ff7270 25.06%, #ea5dad 36.04%, #c2a0fd 47.63%, #9867f0 59.03%, #3bf0e4 69.96%, #33ce43 83.74%, #b2f4b6 95.62%, #dff4b2 95.62%, #ffe580 4.38%);
+            background: linear-gradient(264.51deg, #ffe580 4.38%, #ff7571 11.51%, #ff7270 25.06%, #ea5dad 36.04%, #c2a0fd 47.63%, #9867f0 59.03%, #3bf0e4 69.96%, #33ce43 83.74%, #b2f4b6 90.62%, #dff4b2 95.62%, #ffe580 99.38%);
             -webkit-text-fill-color: transparent;
             -webkit-background-clip: text;
             background-position: 50% 50%;
@@ -64,7 +64,7 @@
         }
 
         .btn {
-            border-color: linear-gradient(264.51deg, #ffe580 4.38%, #ff7571 11.51%, #ff7270 25.06%, #ea5dad 36.04%, #c2a0fd 47.63%, #9867f0 59.03%, #3bf0e4 69.96%, #33ce43 83.74%, #b2f4b6 95.62%, #dff4b2 95.62%, #ffe580 4.38%);
+            border-color: linear-gradient(264.51deg, #ffe580 4.38%, #ff7571 11.51%, #ff7270 25.06%, #ea5dad 36.04%, #c2a0fd 47.63%, #9867f0 59.03%, #3bf0e4 69.96%, #33ce43 83.74%, #b2f4b6 90.62%, #dff4b2 95.62%, #ffe580 99.38%);
         }
 
         .btn:after {
@@ -79,10 +79,10 @@
             backface-visibility: hidden;
             z-index: -3;
             background: transparent;
-            background: linear-gradient(264.51deg, #FFE580 4.38%, #FF7571 11.51%, #FF7270 25.06%, #EA5DAD 36.04%, #C2A0FD 47.63%, #9867F0 59.03%, #3BF0E4 69.96%, #33CE43 83.74%, #B2F4B6 95.62%);
+            background: linear-gradient(to right, #FFE580 4.38%, #FF7571 11.51%, #FF7270 25.06%, #EA5DAD 36.04%, #C2A0FD 47.63%, #9867F0 59.03%, #3BF0E4 69.96%, #33CE43 83.74%, #B2F4B6 90.62%, #FFE580 99.38%);
             background-position: 58% 50%;
             background-size: 500%;
-            animation: gradient-shift 30s ease infinite;
+            animation: gradient-shift 35s ease infinite;
         }
 
 
@@ -150,7 +150,7 @@
             backface-visibility: hidden;
             z-index: -3;
             background: transparent;
-            background: linear-gradient(264.51deg, #FFE580 4.38%, #FF7571 11.51%, #FF7270 25.06%, #EA5DAD 36.04%, #C2A0FD 47.63%, #9867F0 59.03%, #3BF0E4 69.96%, #33CE43 83.74%, #B2F4B6 95.62%);
+            background: linear-gradient(to right, #FFE580 4.38%, #FF7571 11.51%, #FF7270 25.06%, #EA5DAD 36.04%, #C2A0FD 47.63%, #9867F0 59.03%, #3BF0E4 69.96%, #33CE43 83.74%, #B2F4B6 90.62%, #FFE581 99.38%);
             background-position: 58% 50%;
             background-size: 500%;
             animation: gradient-shift 30s cubic-bezier(0, 0, 1, 1) infinite;
