--- a/html/happy2022/index.html
+++ b/html/happy2022/index.html
@@ -890,6 +890,7 @@
 
     </div>
     <footer class="foot-bottom">
+      <span id="name">我的朋友</span>
       <span>祝元旦快乐！</span>
       <br>
       <span>by</span>
