add climacode & blackhole

--- a/html/tbrowser2.html
+++ b/html/tbrowser2.html
@@ -7,16 +7,16 @@
     <title>浏览器型号检测</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <script type = "text/javascript" src = "Browser.js"></script>
+    <script type = "text/javascript" src = "tbrowser.js"></script>
 </head>
 
 <body style="background-color: #2F4056;">
     <h1 style="text-align: center;color: #01AAED">浏览器型号检测</h1>
     <div class="support">
-        <button id="btn1" class="sup-btn" onclick="getexp()">测试一下</button>
+        <button id="btn1" class="sup-btn" onclick="getExp()">测试一下</button>
     </div>
     <p id="show" class="showd">结果</p>
-    <p id="show2" class="showd2">2019.2.4</p>
+    <p id="show2" class="showd2">2022.9.13</p>
 
 </body>
 
