--- a/html/NeonLoveGL.html
+++ b/html/NeonLoveGL.html
@@ -20,6 +20,7 @@
             overflow: hidden;
             background-repeat: no-repeat;
         }
+
         #canvas {
             width: 100vw;
             height: 100vh;
@@ -27,30 +28,30 @@
     </style>
     <canvas id="canvas"></canvas>
     <script>
-        var canvas = document.getElementById("canvas");
+        const canvas = document.getElementById("canvas");
 
         canvas.width = window.innerWidth;
         canvas.height = window.innerHeight;
 
         // Initialize the GL context
-        var gl = canvas.getContext('webgl');
+        const gl = canvas.getContext('webgl');
         if (!gl) {
             console.error("Unable to initialize WebGL.");
         }
 
         //Time
-        var time = 0.0;
+        let time = 0.0;
 
         //************** Shader sources **************
 
-        var vertexSource = `
+        const vertexSource = `
 attribute vec2 position;
 void main() {
 	gl_Position = vec4(position, 0.0, 1.0);
 }
 `;
 
-        var fragmentSource = `
+        const fragmentSource = `
 precision highp float;
 
 uniform float width;
@@ -169,24 +170,24 @@ void main(){
 	float t = time;
     
 	//Get first segment
-  float dist = getSegment(t, pos, 0.0, scale);
-  float glow = getGlow(dist, radius, intensity);
+    float dist = getSegment(t, pos, 0.0, scale);
+    float glow = getGlow(dist, radius, intensity);
   
-  vec3 col = vec3(0.0);
+    vec3 col = vec3(0.0);
 
 	//White core
-  col += 10.0*vec3(smoothstep(0.003, 0.001, dist));
-  //Pink glow
-  col += glow * vec3(1.0,0.05,0.3);
+    col += 10.0*vec3(smoothstep(0.003, 0.001, dist));
+    //Pink glow
+    col += glow * vec3(1.0,0.05,0.3);
   
-  //Get second segment
-  dist = getSegment(t, pos, 3.4, scale);
-  glow = getGlow(dist, radius, intensity);
+    //Get second segment
+    dist = getSegment(t, pos, 3.4, scale);
+    glow = getGlow(dist, radius, intensity);
   
-  //White core
-  col += 10.0*vec3(smoothstep(0.003, 0.001, dist));
-  //Blue glow
-  col += glow * vec3(0.1,0.4,1.0);
+    //White core
+    col += 10.0*vec3(smoothstep(0.003, 0.001, dist));
+    //Blue glow
+    col += glow * vec3(0.1,0.4,1.0);
         
 	//Tone mapping
 	col = 1.0 - exp(-col);
@@ -214,7 +215,7 @@ void main(){
 
         //Compile shader and combine with source
         function compileShader(shaderSource, shaderType) {
-            var shader = gl.createShader(shaderType);
+            const shader = gl.createShader(shaderType);
             gl.shaderSource(shader, shaderSource);
             gl.compileShader(shader);
             if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
@@ -226,7 +227,7 @@ void main(){
         //From https://codepen.io/jlfwong/pen/GqmroZ
         //Utility to complain loudly if we fail to find the attribute/uniform
         function getAttribLocation(program, name) {
-            var attributeLocation = gl.getAttribLocation(program, name);
+            const attributeLocation = gl.getAttribLocation(program, name);
             if (attributeLocation === -1) {
                 throw 'Cannot find attribute ' + name + '.';
             }
@@ -234,7 +235,7 @@ void main(){
         }
 
         function getUniformLocation(program, name) {
-            var attributeLocation = gl.getUniformLocation(program, name);
+            const attributeLocation = gl.getUniformLocation(program, name);
             if (attributeLocation === -1) {
                 throw 'Cannot find uniform ' + name + '.';
             }
@@ -244,11 +245,11 @@ void main(){
         //************** Create shaders **************
 
         //Create vertex and fragment shaders
-        var vertexShader = compileShader(vertexSource, gl.VERTEX_SHADER);
-        var fragmentShader = compileShader(fragmentSource, gl.FRAGMENT_SHADER);
+        const vertexShader = compileShader(vertexSource, gl.VERTEX_SHADER);
+        const fragmentShader = compileShader(fragmentSource, gl.FRAGMENT_SHADER);
 
         //Create shader programs
-        var program = gl.createProgram();
+        const program = gl.createProgram();
         gl.attachShader(program, vertexShader);
         gl.attachShader(program, fragmentShader);
         gl.linkProgram(program);
@@ -256,7 +257,7 @@ void main(){
         gl.useProgram(program);
 
         //Set up rectangle covering entire canvas 
-        var vertexData = new Float32Array([
+        const vertexData = new Float32Array([
             -1.0, 1.0, // top left
             -1.0, -1.0, // bottom left
             1.0, 1.0, // top right
@@ -264,12 +265,12 @@ void main(){
         ]);
 
         //Create vertex buffer
-        var vertexDataBuffer = gl.createBuffer();
+        const vertexDataBuffer = gl.createBuffer();
         gl.bindBuffer(gl.ARRAY_BUFFER, vertexDataBuffer);
         gl.bufferData(gl.ARRAY_BUFFER, vertexData, gl.STATIC_DRAW);
 
         // Layout of our data in the vertex buffer
-        var positionHandle = getAttribLocation(program, 'position');
+        const positionHandle = getAttribLocation(program, 'position');
 
         gl.enableVertexAttribArray(positionHandle);
         gl.vertexAttribPointer(positionHandle,
@@ -281,15 +282,15 @@ void main(){
         );
 
         //Set uniform handle
-        var timeHandle = getUniformLocation(program, 'time');
-        var widthHandle = getUniformLocation(program, 'width');
-        var heightHandle = getUniformLocation(program, 'height');
+        const timeHandle = getUniformLocation(program, 'time');
+        const widthHandle = getUniformLocation(program, 'width');
+        const heightHandle = getUniformLocation(program, 'height');
 
         gl.uniform1f(widthHandle, window.innerWidth);
         gl.uniform1f(heightHandle, window.innerHeight);
 
-        var lastFrame = Date.now();
-        var thisFrame;
+        let lastFrame = Date.now();
+        let thisFrame;
 
         function draw() {
 
