--- a/html/2048neo.html
+++ b/html/2048neo.html
@@ -489,8 +489,9 @@
             $("#game-window .option .button").click(function () {
                 init();
             });
+
             //阻止页面滑动
-            $(document).on('touchmove', function (e) {
+            document.addEventListener('touchmove', function (e) {
                 e.preventDefault();
             }, {
                 passive: false
